--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-
+    <link href="styles/custom.css" rel="stylesheet">
   <title>Where'd My Money Go?</title>
 </head>
 
@@ -40,7 +40,7 @@
         <p id="statusMsg">Looking up your transactions</p>
         <table class="table table-striped table-hover">
           <thead>
-            <tr>
+            <tr class="header-row">
               <th>Date</th>
               <th>Description</th>
               <th>Category</th>
@@ -50,6 +50,15 @@
           </thead>
           <tbody id="transactionTable"></tbody>
         </table>
+        <div class = "mainQuery">
+          <h4>Enter Questions Here</h4>
+          <div class = "input_and_click">
+
+            <input type="text" class="text_input" placeholder="..." aria-label="Text input">
+            <button class="btn btn-primary" type="button">Submit</button>
+
+          </div>
+        </div>
         <div class="w-75 border border-1 p-2 rounded-2" id="deubgCalls">
           <p>Debug calls:</p>
           <button type="button" class="btn btn-outline-secondary button-md my-2" id="serverRefresh">Server
